<?xml version="1.0"?>

<resources>
    <string name="app_name">PocketChef</string>
    <string name="title_activity_signin" />
    <string name="title_activity_home_page">homePage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="create_meal">Create Meal</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="select_list">Select List</string>
    <string name="home">Home</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="delete_meal">Delete Meal</string>
    <string name="meal_title">Title:</string>
    <string name="meal_description">Description:</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="Meals">Meals</string>
    <string name="add_title">Add Title</string>
    <string name="add_description">Add Description</string>
    <string name="description">Description</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign up</string>
    <string name="title">Title</string>
    <string name="add_instructions">Add Instructions</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="add_image">Add Image</string>
    <string name="add">+</string>
    <string name="remove">-</string>
    <string name="calendar_forward">Calendar Forward</string>
    <string name="calendar_back">Calendar back</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="friday">Fri</string>
    <string name="thursday">Thu</string>
    <string name="wednesday">Wed</string>
    <string name="tuesday">Tue</string>
    <string name="monday">Mon</string>
    <string name="currentdate">currentDate</string>
    <string name="day">day</string>
    <string name="mealitem">mealItem</string>
    <string name="add_meal_to_date">Add Meal to Date</string>
    <string name="add_meal">Add meal</string>
</resources>