<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/custom_calendar">

    <LinearLayout
        android:id="@+id/custom_calendar_linear"
        android:layout_width="409dp"
        android:layout_height="660dp"
        android:layout_marginTop="71dp"
        android:background="@color/blue2"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue1"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingTop="4dp"
            android:paddingEnd="0dp"
            android:paddingBottom="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/title_box_black"
                android:fontFamily="@font/bookman_os_bold"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/monday"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/title_box_black"
                android:fontFamily="@font/bookman_os_bold"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/tuesday"
                android:textColor="@color/black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/title_box_black"
                android:fontFamily="@font/bookman_os_bold"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/wednesday"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/title_box_black"
                android:fontFamily="@font/bookman_os_bold"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/thursday"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/title_box_black"
                android:fontFamily="@font/bookman_os_bold"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/friday"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/title_box_black"
                android:fontFamily="@font/bookman_os_bold"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/saturday"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/title_box_black"
                android:fontFamily="@font/bookman_os_bold"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/sunday"
                android:textColor="@color/black" />


        </LinearLayout>

        <GridView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="7"
            />

    </LinearLayout>

    <ImageButton
        android:id="@+id/calenderBack"
        android:layout_width="50dp"
        android:layout_height="53dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/calendar_back"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/backbutton" />

    <ImageButton
        android:id="@+id/calenderForward"
        android:layout_width="50dp"
        android:layout_height="53dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/calendar_forward"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/forwardbutton" />

    <TextView
        android:id="@+id/currentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentdate"
        app:layout_constraintBottom_toTopOf="@+id/custom_calendar_linear"
        app:layout_constraintEnd_toStartOf="@+id/calenderForward"
        app:layout_constraintStart_toEndOf="@+id/calenderBack"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>