<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    tools:context=".createMeal">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cm_text_search"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"

        android:layout_width="200dp"
        android:layout_height="50dp"


        android:layout_margin="16dp"
        android:hint="@string/select_list"
        android:outlineSpotShadowColor="@color/blue2"
        app:layout_constraintEnd_toStartOf="@+id/mealImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createMealTitle">

        <AutoCompleteTextView
            android:id="@+id/cm_meal_search"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/border_shape"
            android:completionThreshold="1"
            app:simpleItemSelectedColor="#072554"
            app:simpleItemSelectedRippleColor="#072554" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button7"
        android:layout_width="42dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/createMealDescription"
        android:layout_width="395dp"
        android:layout_height="100dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/border_shape"
        android:ems="10"
        android:gravity="center|top|start"
        android:hint="@string/add_description"
        android:inputType="textMultiLine"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textAlignment="gravity"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/createMealDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createMealTitle"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/instructions"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/tvIngredients"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/title"
        android:textAlignment="gravity"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/createMealTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625" />

    <EditText
        android:id="@+id/createMealTitle"
        android:layout_width="182dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/border_shape"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/add_title"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:paddingTop="0px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/tvIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/createMealInstructions"
            android:layout_width="261dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:background="@drawable/border_shape"
            android:gravity="center|top|start"
            android:hint="@string/add_instructions"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:singleLine="false" />

        <EditText
            android:id="@+id/createMealIngredients"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@drawable/border_shape"
            android:ems="10"
            android:gravity="center|top|start"
            android:hint="@string/add_ingredients"
            android:inputType="textMultiLine"
            android:padding="5dp" />
    </LinearLayout>

    <Button
        android:id="@+id/createCompletedMealBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/create_meal"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <ImageView
        android:id="@+id/mealImage"
        android:layout_width="173dp"
        android:layout_height="163dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/temp_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/addMealImage"
        android:layout_width="120dp"
        android:layout_height="39dp"
        android:layout_marginEnd="40dp"

        android:text="@string/add_image"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/createMealDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealImage"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/createList"
        android:layout_width="59dp"
        android:layout_height="36dp"

        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/createMealDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cm_text_search"
        app:layout_constraintVertical_bias="0.266" />

    <Button
        android:id="@+id/removeList"
        android:layout_width="60dp"
        android:layout_height="36dp"

        android:text="@string/remove"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/createMealDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cm_text_search"
        app:layout_constraintVertical_bias="0.266" />

</androidx.constraintlayout.widget.ConstraintLayout>